JBIDE-12508: Support Check for Updates
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@43553 a97e2381-89e5-4abb-bab3-167db6db766c